--- a/assets/mix-manifest.json
+++ b/assets/mix-manifest.json
@@ -1,4 +1,7 @@
 {
     "/js/script.js": "/js/script.js",
+    "/js/home.js": "/js/home.js",
+    "/js/ytb.js": "/js/ytb.js",
+    "/js/spt.js": "/js/spt.js",
     "/css/style.css": "/css/style.css"
 }
