--- a/assets/mix-manifest.json
+++ b/assets/mix-manifest.json
@@ -3,5 +3,6 @@
     "/js/home.js": "/js/home.js",
     "/js/ytb.js": "/js/ytb.js",
     "/js/spt.js": "/js/spt.js",
+    "/js/follow.js": "/js/follow.js",
     "/css/style.css": "/css/style.css"
 }
